--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <link rel="stylesheet" href="index.css"></link>        
+        <link rel='stylesheet' href="index.css">       
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
         <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <link rel="icon" type="images/x-icon" href="../images/favicon.png"></link>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <title>Talha Rashid's Website</title>
     <body>
